src/test/deca/context/invalid/LE/Override2.deca
// Description:
//    test un Override interdits (changement signature)
//
// Resultats:
//    
//
// Historique:
//    cree le 20/01/2022

class C1 {
    int a ;
    void Constructeur (int valeur) {
        this.a = valeur ;
    }
}

class C2 extends C1 {
    int b ;
    int Constructeur (int v1) {
        this.a = v1 ;
        this.b = v1 ;
        return this.v1 ;
    }
}